@@ -5,6 +5,8 @@ git-annex (4.20130602) UNRELEASED; urgency=low
     symlinks and other POSIX filesystem features.
   * Android: Add .thumbnails to .gitignore when setting up a camera
     repository.
+  * Android: Make the "Open webapp" menu item open the just created
+    repository when a new repo is made.
 
  -- Joey Hess <joeyh@debian.org>  Mon, 10 Jun 2013 12:52:44 -0400
 
